package baiTap.btA3;

public abstract class Shape {
    protected String brush = "Brush A";
    protected String paper = "Paper B";
    protected String frame = "Frame C";

    public abstract String draw();
}
