package creational.singleton.shape;

public enum ShapeType {
    CIRCLE, TRIANGLE, RECTANGLE
}
